package practicas.SistemaPagoECommerce;

/**
 * Clase principal de la aplicación de e-commerce
 * Gestiona el sistema de pagos de la tienda online
 * @author Manuela Planelles
 * @version 1.0
 * @see Tienda
 */
public class AppEcommerce {
    /**
     * Método principal que inicia la aplicación
     * @param args Argumentos de línea de comandos (no utilizados)
     */
    public static void main(String[] args) {
        Tienda.iniciarPago();
    }
}